jquery 출력하는 위치 변경하게 수정

--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
 	<script>if (window.module) module = window.module;</script>
 </head>
 <body>
-	<button id="bu_1">click</button>
+	<div>
+		우편번호 조회</br>
+		<input type="text" id="tf_address"/>
+		<button id="bu_1">click</button>
+	</div>
+	<div id="result_area">
+
+	</div>
+
 </body>
 <script>require("./dist/renderer/app.js")</script>
 <script>
-
-
-
 </script>
 
 </html>
