--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 	<div>
-		우편번호 조회</br>
-		<input type="text" id="tf_address"/>
+		우편번호 조회2</br>
+		<input type="text" id="tf_address" value="주월동 408-1" />
 		<button id="bu_1">click</button>
 	</div>
 	<div id="result_area">
