webpack build에 추가

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<button id="bu_1">click</button>
 	</div>
 	<div id="result_area">
-
+		<a href="./static/index.html">print address</a>
 	</div>
 
 </body>
